@@ -13,7 +13,7 @@
 """ Unit test for ‘_metadata’ private module.
     """
 
-from __future__ import unicode_literals
+from __future__ import (absolute_import, unicode_literals)
 
 import sys
 import re
@@ -25,12 +25,12 @@ except ImportError:
     import urlparse
 import functools
 
-import mock
 import pkg_resources
-
-import scaffold
+import mock
 import testtools.helpers
 import testtools.matchers
+
+from . import scaffold
 
 import daemon._metadata as metadata
 
